style.css
@import "../libraries/style.css";

/*
Theme Name: MIT Libraries Child NEW
Author: Lightning Trumpet & MIT Libraries
Author URI: http://wordpress.org/
Version: akdc_prepwork

Template: libraries

MIT Libraries theme built for the MIT Libraries child websites.
*/
/* ---- Parent Theme Element Overrides ---- */
* {
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
	-o-box-sizing:border-box;
	box-sizing:border-box;
}

/*.childTheme .title-page {
	background: #333;
	color: #fff;
}*/
body {
	font-family:'Open Sans',Helvetica,sans-serif!important;
}

h1,h2,h3,h4,h5,h6 {
	font-family:'Open Sans',Helvetica,sans-serif!important;
}

.childTheme ul {
	list-style-type:none;
}

.childTheme ol {
	list-style-type:decimal;
}

.childTheme hr {
	border:none;
	margin:2em 1em;
}

/* ---- Begin Child Page Content Styles ---- */
.childTheme .betterBreadcrumbs {
	background:#eceaea;
	font-size:.75rem;
	line-height:1;
	padding: 8px 8px 8px 27.5px;
}

.betterBreadcrumbs span:not(:last-of-type):after {
	content:' \00bb ';
}

.category .categoryName,.search .mainContent h2.search-title {
	border-bottom:1px solid #ccc;
	font-size:2em;
	font-weight:400;
	margin-bottom:1em;
	text-transform:none;
}

.childTheme .siteTitle .todayHours {
	color:#d2ccc4;
	display:block;
	float:right;
	margin-top:.5em;
	top:auto;
	position:relative;
	right:auto;
	width:auto;
}

.childTheme .todayHours span {
	display:block;
}

.siteTitle .todayHours span:nth-child(2) {
	font-weight:700;
}

.childTheme .todayHours a,.childTheme .locationInfo a {
	color:#fff;
}

.childTheme .todayHours a:after,.childTheme .locationInfo a:after {
	content:'\f061';
	display:inline-block;
	font-family:'fontawesome-MITLibraries';
	margin-left:.5em;
}

.childTheme .locationInfo span {
	color:#fff;
	display:block;
	line-height:1.5;
}

/* ---- Child Post Nav ---- */
.post-page-nav {
	margin:0 auto;
}

.post-navigation {
	margin:0 auto;
	padding-bottom:50px;
	text-align:center;
}

.post-navigation li a,.post-navigation li a:hover,.post-navigation li.active a,.post-navigation li.disabled {
	color:#fff;
	text-decoration:none;
}

.post-navigation li {
	display:inline;
}

.post-navigation li a,.post-navigation li a:hover,.post-navigation li.active a,.post-navigation li.disabled {
	background-color:#6FB7E9;
	border-radius:3px;
	cursor:pointer;
	padding:12px;
	padding:.75rem;
}

.post-navigation li a:hover,.post-navigation li.active a {
	background-color:#3C8DC5;
}

/* ---- Child Page Nav ---- */
nav.navbar.navbar-default {
	background: none;
	border-radius: 0;
	border: none;
	border-bottom: 1px solid #e7e7e7;
	border-top: 1px solid #e7e7e7;
}

.mobile-display {
	display:none;
}

.nav-second>li>a:hover {
	color:#338bc5!important;
	text-decoration:underline;
}

@media only screen and (min-width : 768px) {
	/* Make Navigation Toggle on Desktop Hover */
	.dropdown:hover .dropdown-menu {
		display:block;
	}
}

/* ---- Child Header ---- */
.header-bg-image-high {
	position:absolute;
	top:0;
	z-index:-99998;
	overflow:hidden;
	height:200px;
	max-width:100%;
}

.header-bg-image-short {
	position:absolute;
	top:0;
	z-index:-99998;
	overflow:hidden;
	height:100px;
}

.header-bg-image-short img {
	width:100%;
}

.page-header-home {
	color:#fff;
	position:relative;
	padding:27.5px;
}

.page-header-internal {
	color:#fff;
	position:relative;
	padding:15px 27.5px;
}

.child-header-tall {
	height:200px;
	overflow:hidden;
	display:inline-block;
	width:100%;
	background:-moz-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* FF3.6+ */
	background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(0,0,0,0.65)),color-stop(100%,rgba(0,0,0,0)));
/* Chrome,Safari4+ */
	background:-webkit-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* Chrome10+,Safari5.1+ */
	background:-o-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* Opera 11.10+ */
	background:-ms-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* IE10+ */
	background:linear-gradient(to bottom,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* W3C */
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000',endColorstr='#00000000',GradientType=0);
/* IE6-9 */
}

.child-header-short {
	height:100px;
	overflow:hidden;
	display:inline-block;
	width:100%;
	background:-moz-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* FF3.6+ */
	background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(0,0,0,0.65)),color-stop(100%,rgba(0,0,0,0)));
/* Chrome,Safari4+ */
	background:-webkit-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* Chrome10+,Safari5.1+ */
	background:-o-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* Opera 11.10+ */
	background:-ms-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* IE10+ */
	background:linear-gradient(to bottom,rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
/* W3C */
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000',endColorstr='#00000000',GradientType=0);
/* IE6-9 */
}

.child-tagline {
	font-size:14px;
}

.child-page-title {
	font-size:34px!important;
	font-size:2.25rem!important;
	font-weight:400!important;
	line-height:2;
}

.child-page-title a {
	font-size:28px;
	line-height:1.5;
	color:#fff;
}

.info-more,.info-more a,.link-hours-all,.info-more a:hover,.hours-today a:hover {
	color:#fff;
}

/* ---- Main Content Area ---- */
.allContent {
	margin-top: 2em;
}

.childTheme #content.allContent {
	line-height: 1.5;
}

.hasSidebar .mainContent {
	float: left;
	padding-right: 2em;
	width: 700px;
	width: 76.05%;
}

.ie8 .hasSidebar .mainContent {
	width: 76%;
}

.mainContent {
	width: 100%;
	padding-left: 27.5px;
	margin-bottom: 100px;
}

.mainContent h3 {
	line-height: 1.5;
}

/* ---- Full Width Template Styles ---- */
.section-wrapper {
	padding-bottom: 50px;
	margin-bottom: 50px;
	border-bottom: 1px solid #888;
	float: left;
}

.section-wrapper-last {
	float: left;	
	margin: 25px 0;
}
/* ... */

